<resources>
    <string name="app_name">University Scheduler</string>
    <string name="title_activity_assessment_detail_view">detail_view_activity</string>
    <string name="title_activity_add_edit_assessment">add_edit_assessment</string>
    <string name="title_activity_course_detail_view">course_detail_view</string>
    <string name="title_activity_term_detail_view">term_detail_view</string>
    <string name="title_activity_add_edit_course">add_edit_course</string>
    <string name="title_activity_add_term">add_edit_term</string>
    <string name="title_activity_assessments">assessments_activity</string>
    <string name="title_activity_courses">courses_activity</string>
    <string name="title_activity_terms">terms_activity</string>
    <string name="title_activity_navigation">navigation_activity</string>
    <string name="term_detail_title">Title:</string>
    <string name="term_start_date">Start Date:</string>
    <string name="term_end_date">End Date:</string>
    <string name="courses">Courses:</string>
    <string name="edit_term">Edit Term</string>
    <string name="delete">Delete</string>
    <string name="nav_home_button">Home</string>
    <string name="terms_nav_text">terms_nav_text</string>
    <string name="courses_nav_text">courses_nav_text</string>
    <string name="assessments_nav_text">assessments_nav_text</string>
    <string name="progress">Progress</string>
    <string name="progress_update_here">Progress update here</string>
    <string name="scheduler">Scheduler</string>
    <string name="course_detail_title">Title:</string>
    <string name="course_start_date">Start Date:</string>
    <string name="course_end_date_est">End Date (est):</string>
    <string name="edit_course">Edit Course</string>
    <string name="course_delete">Delete</string>
    <string name="course_term">Term:</string>
    <string name="course_status">Status:</string>
    <string name="course_notes">Notes:</string>
    <string name="course_assessments">Assessments:</string>
    <string name="share_notes">Share Notes</string>
    <string name="start_alarm_off">Start Alarm Off</string>
    <string name="start_alarm_on">Start Alarm On</string>
    <string name="end_alarm_off">End Alarm Off</string>
    <string name="end_alarm_on">End Alarm On</string>
    <string name="assessment_title">Title:</string>
    <string name="goal_date">Goal Date:</string>
    <string name="assessment_type">Type:</string>
    <string name="assessment_course">Course:</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="alarm_on">Alarm On</string>
    <string name="term_name">Term Name:</string>
    <string name="add_term_start_date">Start Date:</string>
    <string name="choose_a_start_date">Choose a Start Date</string>
    <string name="add_term_end_date">End Date:</string>
    <string name="choose_an_end_date">Choose an End Date</string>
    <string name="save_term_button">Save</string>
    <string name="course_name">Course Name:</string>
    <string name="add_course_start_date">Start Date:</string>
    <string name="add_course_notes">Notes:</string>
    <string name="choose_a_term">Choose a terms:</string>
    <string name="add_course_status">Course status:</string>
    <string name="add_course_choose_a_start_date">Choose a Start Date</string>
    <string name="add_course_end_date">End Date:</string>
    <string name="add_course_choose_an_end_date">Choose an End Date</string>
    <string name="save_course_button">Save</string>
    <string name="add_assessment_title">Title:</string>
    <string name="performance_assessment">Performance Assessment</string>
    <string name="objective_assessment">Objective Assessment</string>
    <string name="due_date">Due Date:</string>
    <string name="choose_a_due_date">Choose a Due Date</string>
    <string name="choose_a_course">Choose a Course:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="terms_fab">Terms FAB</string>
    <string name="courses_fab">Courses FAB</string>
    <string name="assessment_fab">Assessment FAB</string>
    <string name="navigation">Navigation</string>
    <string name="remove_term">Remove Term</string>
    <string name="edit_term_button">Edit Term</string>
    <string name="term_name_label">Name:</string>
    <string name="wgu_logo">WGU LOGO</string>
    <string name="view_assessments">View Assessments</string>
    <string name="view_courses">View Courses</string>
    <string name="view_terms">View Terms</string>
    <string name="home_page">Home Page</string>
    <string name="instructor_name">Instructor Name:</string>
    <string name="instructor_phone">Instructor Phone:</string>
    <string name="instructor_email">Instructor Email:</string>
    <string name="remove_course">Remove Course</string>
    <string name="share_course_notes">Share Course Notes</string>
    <string name="end_alert_on">End Alert On</string>
    <string name="end_alert_off">End Alert Off</string>
    <string name="end_date">End Date:</string>
    <string name="start_alert_on">Start Alert On</string>
    <string name="start_alert_off">Start Alert Off</string>
    <string name="name">Course Detail Name</string>
    <string name="course_detail_name">Name:</string>
    <string name="start_alert_disabled">Start Alert Off</string>
    <string name="start_alert_enabled">Start Alert On</string>
    <string name="end_alert_disabled">End Alert Off</string>
    <string name="end_alert_enabled">End Alert On</string>
    <string name="assessment_goal_date_alert_off">Assessment Goal Date Alert Off</string>
    <string name="assessment_goal_date_alert_on">Assessment Goal Date Alert On</string>
    <string name="remove_assessment">Remove Assessment</string>
    <string name="assessment_detail_name">Name:</string>
    <string name="assessment_type_detail">Assessment Type:</string>
    <string name="course_name_as_detail">Course Name:</string>
    <string name="choose_a_class">Choose Class</string>
    <string name="edit_assessment_name">Name:</string>
    <string name="assessment_type_edit">Assessment Type:</string>
    <string name="oa_objective_assessment">OA(Objective Assessment)</string>
    <string name="pa_performance_assessment">PA(Performance Assessment)</string>
    <string name="assessment_due_date">Assessment Due Date:</string>
    <string name="edit_assessment_date">Select</string>
    <string name="edit_assessment_course">Select Course:</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="edit_term_title">Term Title:</string>
    <string name="edit_term_start_date">Term Start Date:</string>
    <string name="edit_term_sd">Select</string>
    <string name="edit_term_end_date">Term End Date:</string>
    <string name="edit_term_ed">Select</string>
    <string name="save_term_edit">Save Term</string>
    <string name="title_of_course">Title Of Course:</string>
    <string name="edit_instructor_phone">Instructor Phone:</string>
    <string name="edit_instructor_email">Instructor Email:</string>
    <string name="edit_instructor_name">Instructor Name:</string>
    <string name="select_term">Select Term:</string>
    <string name="edit_course_start_date">Course Start Date:</string>
    <string name="edit_notes_for_course">Notes For Course:</string>
    <string name="edit_status_of_course">Status Of Course:</string>
    <string name="edit_course_select_sd">Select</string>
    <string name="edit_course_end_date">Course End Date:</string>
    <string name="edit_course_select_ed">Select</string>
    <string name="scheduler_logo">Scheduler Logo</string>
    <string name="da_end_date">End Date:</string>
    <string name="da_start_date">Start Date:</string>
    <string name="assessment_start_date_alert_off">Assessment Start Date Alert Off</string>
    <string name="assessment_start_date_alert_on">Assessment Start Date Alert On</string>
    <string name="assessment_end_date_alert_off">Assessment End Date Alert Off</string>
    <string name="assessment_end_date_alert_on">Assessment End Date Alert On</string>
    <string name="assessment_start_date">Assessment Start Date:</string>
    <string name="university_scheduler_app">University Scheduler App</string>
    <string name="university_scheduler_app_nav">University Scheduler App</string>
    <string name="university_scheduler_app_main">University Scheduler App</string>
    <string name="current_degree_program_progress">Current Degree Program Progress</string>
    <string name="scheduler_progress_update">Scheduler Progress Update</string>
</resources>